minor update with index html

--- a/index.html
+++ b/index.html
@@ -352,8 +352,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_5.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Pineapple Juice</h3>
@@ -370,8 +369,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_6.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Green Juice</h3>
@@ -388,8 +386,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_7.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Soft Drinks</h3>
@@ -406,8 +403,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_5.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Carlo Rosee Drinks</h3>
@@ -431,8 +427,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_3.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Beef Steak</h3>
@@ -449,8 +444,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_4.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Tomato with Chicken</h3>
@@ -467,8 +461,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_2.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Sausages from Italy</h3>
@@ -485,8 +478,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_8.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Beef Grilled</h3>
@@ -510,8 +502,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_5.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Pineapple Juice</h3>
@@ -528,8 +519,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_6.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Green Juice</h3>
@@ -546,8 +536,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_7.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Soft Drinks</h3>
@@ -564,8 +553,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_5.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Carlo Rosee Drinks</h3>
@@ -589,8 +577,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_3.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Beef Steak</h3>
@@ -607,8 +594,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_4.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Tomato with Chicken</h3>
@@ -625,8 +611,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_2.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Sausages from Italy</h3>
@@ -643,8 +628,7 @@
 									<div class="fh5co-food-desc">
 										<figure>
 											<img src="images/res_img_8.jpg"
-												class="img-responsive"
-												alt="Free HTML5 Templates by FREEHTML5.co">
+												class="img-responsive">
 										</figure>
 										<div>
 											<h3>Beef Grilled</h3>
